--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "start_url": "./",
   "scope": "./",
   "display": "standalone",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "icons/icon.png",
