--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     {
       "src": "icons/icon.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
